1st version of Login API

--- a/Internship2022TeamSzabi/Podfile
+++ b/Internship2022TeamSzabi/Podfile
@@ -3,6 +3,9 @@ use_frameworks!
 
 target 'Internship2022TeamSzabi' do
   pod 'Firebase/Core', '8.1.0'
+  pod 'Firebase/Auth'
+  pod 'Firebase/Database'
+  pod 'Firebase/Firestore'
   pod 'Firebase/Crashlytics'
   pod 'Firebase/Messaging'
   pod 'Firebase/Analytics'
