Changes : - change background color to ".white" - adjusted constraints to proper position - removed scroll bar - fixed infinite scrolling

--- a/Internship2022TeamSzabi/Podfile
+++ b/Internship2022TeamSzabi/Podfile
@@ -6,4 +6,7 @@ target 'Internship2022TeamSzabi' do
   pod 'Firebase/Crashlytics'
   pod 'Firebase/Messaging'
   pod 'Firebase/Analytics'
+  pod 'FirebaseFirestore'
+  pod 'Firebase/Auth'
+
 end
