--- a/Internship2022TeamSzabi/Podfile
+++ b/Internship2022TeamSzabi/Podfile
@@ -6,4 +6,8 @@ target 'Internship2022TeamSzabi' do
   pod 'Firebase/Crashlytics'
   pod 'Firebase/Messaging'
   pod 'Firebase/Analytics'
+  pod 'Firebase/Auth'
+  pod 'Firebase/Database'
+  pod 'Firebase/Firestore'
+  
 end
